# rust-webgpu-renderer

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/engine/: camera.rs  input_state.rs  mod.rs  types.rs  utils.rs
src/engine/shaders/: shader.frag  shader.vert
src/house/: mod.rs
