[package]
name = "rust-web-gpu-renderer"
version = "0.1.0"
authors = ["Tad Scritchfield <tadscritch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wpgu = "0.5"
imgui = "0.3"
winit = "0.21"
glsl-to-spirv = "0.1.7"
tobj = "1.0.0"