[package]
name = "rust-web-gpu-renderer"
version = "0.1.0"
authors = ["Tad Scritchfield <tadscritch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vulkan = ["wgc/gfx-backend-vulkan"]

[dependencies]
wgpu = "0.5.0"
imgui = "0.3.0"
winit = "0.21.0"
glsl-to-spirv = "0.1.7"
tobj = "1.0.0"
futures = "0.3"

[build-dependencies]
glsl-to-spirv = "0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgc]
package = "wgpu-core"
version = "0.5"
git = "https://github.com/gfx-rs/wgpu"
rev = "5c172dd4756aa152b4f3350e624d7b1b5d24ddda"

[dependencies.wgt]
package = "wgpu-types"
version = "0.5"
git = "https://github.com/gfx-rs/wgpu"
rev = "5c172dd4756aa152b4f3350e624d7b1b5d24ddda"